--- a/ZenWINX/ZenWINX.vcxproj.filters
+++ b/ZenWINX/ZenWINX.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="commands.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="charset.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dbg.c">
