--- a/ZenWINX/ZenWINX.vcxproj.filters
+++ b/ZenWINX/ZenWINX.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClCompile Include="script.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="process.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
