--- a/naoh.vcxproj
+++ b/naoh.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="cmd.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="script.c" />
     <ClCompile Include="shell.c" />
   </ItemGroup>
   <ItemGroup>
