--- a/naoh.vcxproj.filters
+++ b/naoh.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="cmd.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="script.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="naoh.h">
