--- a/ZenWINX/ZenWINX.vcxproj
+++ b/ZenWINX/ZenWINX.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="prb.c" />
     <ClCompile Include="prec.c" />
     <ClCompile Include="privilege.c" />
+    <ClCompile Include="process.c" />
     <ClCompile Include="reg.c" />
     <ClCompile Include="script.c" />
     <ClCompile Include="stdio.c" />
