add imdisk support

--- a/naoh.vcxproj.filters
+++ b/naoh.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClCompile Include="script.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="imdisk.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="naoh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="imdisk.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
