--- a/naoh.vcxproj
+++ b/naoh.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Release|Win32">
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cmd.c" />
+    <ClCompile Include="imdisk.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="script.c" />
     <ClCompile Include="shell.c" />
@@ -22,6 +23,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="imdisk.h" />
     <ClInclude Include="naoh.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
